Home format change

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15214,10 +15214,12 @@ h2.bd-postheader-5 a {
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24yMg {}
 .bd-section-22 {
   height: 100%;
-  background-color: #d6d6d6;
+  background-color: #57d175;
 }
 .bd-section-22 {
+  line-height: 22.85714286px;
   color: #858585;
+  font-size: 16px;
 }
 .bd-section-22 h3 {
   text-transform: uppercase;
@@ -16843,6 +16845,9 @@ h2.bd-textblock-175 {
 .bd-textblock-176 {
   margin-top: 42px;
 }
+h4.bd-textblock-176 {
+  color: #ffffff;
+}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3Ng {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3Nw {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3Nw {}
@@ -17026,6 +17031,9 @@ h2.bd-textblock-2 {
   margin-top: 0px;
   padding-top: 0px;
   margin-bottom: 42px;
+}
+h3.bd-textblock-21 {
+  color: #ffffff;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIx {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIxMA {}
@@ -17385,6 +17393,9 @@ h2.bd-textblock-26 {
 .bd-textblock-270 {
   margin-bottom: 55px;
 }
+.bd-textblock-270 {
+  color: #ffffff;
+}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazI3MA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazI3MQ {}
 .bd-textblock-271 {
@@ -17626,6 +17637,9 @@ h2.bd-textblock-26 {
 .bd-textblock-303 {
   margin-top: 55px;
 }
+h4.bd-textblock-303 {
+  color: #ffffff;
+}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMwMw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMwNA {}
 .bd-textblock-304 {
@@ -17701,6 +17715,9 @@ h2.bd-textblock-31 {
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMxNA {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMxNA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMxNQ {}
+.bd-textblock-315 {
+  color: #ffffff;
+}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMxNQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMxNg {}
 .bd-textblock-316 {
@@ -17839,6 +17856,9 @@ ul.bd-textblock-325 {
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMzOQ {}
 .bd-textblock-339 {
   margin-bottom: 25px;
+}
+.bd-textblock-339 {
+  color: #ffffff;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMzOQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM0 {}
@@ -18025,6 +18045,9 @@ ul.bd-textblock-353 {
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM3MQ {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM3MQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM3Mg {}
+.bd-textblock-372 {
+  color: #ffffff;
+}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM3Mg {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM3Mw {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM3Mw {}
@@ -18530,6 +18553,21 @@ h6.bd-textblock-444 h6 {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ0NA {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ0Ng {}
+.bd-textblock-446 {
+  padding-right: 0px;
+  padding-left: 0px;
+  margin: 100px 0px 18px;
+}
+@media (max-width: 767px) {
+  .bd-textblock-446 {
+    margin-bottom: 10px;
+  }
+}
+h2.bd-textblock-446 {
+  color: #ffffff;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ0Ng {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ0OQ {}
 @media (max-width: 767px) {
   .bd-textblock-449 {
@@ -18720,11 +18758,6 @@ h6.bd-textblock-462 h6 {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ2Mg {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ3 {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ3 {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ4 {}
-h2.bd-textblock-48 {
-  color: #c266ff;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ4 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ5 {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ5 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazU {}
