--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15129,6 +15129,7 @@ h2.bd-postheader-5 a {
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24xOA {}
 .bd-section-18 {
   background-color: #57d175;
+  height: 20px;
 }
 .bd-section-18 h1 {
   font-family: 'Archivo Black', Arial, 'Arial Unicode MS', Helvetica, sans-serif;
@@ -19198,7 +19199,7 @@ h4.bd-textblock-9 {
   }
 }
 h1.bd-textblock-95 {
-  color: #ffffff;
+  color: #858585;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazk1 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazk2 {}
