Purple titles to white

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16844,7 +16844,7 @@ h2.bd-textblock-175 {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3NQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3Ng {}
 .bd-textblock-176 {
-  margin-top: 42px;
+  margin-top: 5px;
 }
 h4.bd-textblock-176 {
   color: #ffffff;
@@ -17031,7 +17031,7 @@ h2.bd-textblock-2 {
 .bd-textblock-21 {
   margin-top: 0px;
   padding-top: 0px;
-  margin-bottom: 42px;
+  margin-bottom: 5px;
 }
 h3.bd-textblock-21 {
   color: #ffffff;
@@ -17798,7 +17798,7 @@ ul.bd-textblock-325 {
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMyNw {}
 .bd-textblock-327 {
   font-weight: bold;
-  color: #c266ff;
+  color: #ffffff;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMyNw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMyOA {}
@@ -17894,7 +17894,7 @@ ul.bd-textblock-325 {
 }
 .bd-textblock-347 {
   font-weight: bold;
-  color: #c266ff;
+  color: #ffffff;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM0Nw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM0OA {}
@@ -17949,7 +17949,7 @@ ul.bd-textblock-353 {
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM1NQ {}
 .bd-textblock-355 {
   font-weight: bold;
-  color: #c266ff;
+  color: #ffffff;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM1NQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM1Ng {}
@@ -18002,7 +18002,7 @@ ul.bd-textblock-353 {
 }
 .bd-textblock-363 {
   font-weight: bold;
-  color: #c266ff;
+  color: #ffffff;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM2Mw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM2NA {}
